Developed model to predict expected crop prices

--- a/Crop Prediction.ipynb
+++ b/Crop Prediction.ipynb
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 46,
    "id": "b5a59282",
    "metadata": {},
    "outputs": [
@@ -512,20 +512,107 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                    state        district              commodity arrival_date\n",
-      "0     Andaman and Nicobar   South Andaman             Amaranthus   2019-04-03\n",
-      "1     Andaman and Nicobar   South Andaman         Banana - Green   2019-04-03\n",
-      "2     Andaman and Nicobar   South Andaman  Bhindi(Ladies Finger)   2019-04-03\n",
-      "3     Andaman and Nicobar   South Andaman           Bitter gourd   2019-04-03\n",
-      "4     Andaman and Nicobar   South Andaman           Black pepper   2019-04-03\n",
-      "...                   ...             ...                    ...          ...\n",
-      "2233          West Bengal  Uttar Dinajpur                 Potato   2019-04-03\n",
-      "2234          West Bengal  Uttar Dinajpur                   Rice   2019-04-03\n",
-      "2235          West Bengal  Uttar Dinajpur                   Jute   2019-04-03\n",
-      "2236          West Bengal  Uttar Dinajpur                   Rice   2019-04-03\n",
-      "2237          West Bengal  Uttar Dinajpur                  Wheat   2019-04-03\n",
+      "      state  district  commodity  Year  Month  Day\n",
+      "0         0       153          0  2019      4    3\n",
+      "1         0       153         10  2019      4    3\n",
+      "2         0       153         18  2019      4    3\n",
+      "3         0       153         19  2019      4    3\n",
+      "4         0       153         22  2019      4    3\n",
+      "...     ...       ...        ...   ...    ...  ...\n",
+      "2233     25       167        118  2019      4    3\n",
+      "2234     25       167        123  2019      4    3\n",
+      "2235     25       167         74  2019      4    3\n",
+      "2236     25       167        123  2019      4    3\n",
+      "2237     25       167        152  2019      4    3\n",
       "\n",
-      "[2238 rows x 4 columns]\n"
+      "[2238 rows x 6 columns]\n",
+      "y0 results:\n",
+      "ExplainableBoostingRegressor()\n",
+      "0.5919004876778682\n",
+      "RandomForestRegressor()\n",
+      "0.5657909321057213\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sutha\\anaconda3\\lib\\site-packages\\xgboost\\data.py:262: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  elif isinstance(data.columns, (pd.Int64Index, pd.RangeIndex)):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+      "             colsample_bynode=1, colsample_bytree=1, enable_categorical=False,\n",
+      "             gamma=0, gpu_id=-1, importance_type=None,\n",
+      "             interaction_constraints='', learning_rate=0.300000012,\n",
+      "             max_delta_step=0, max_depth=6, min_child_weight=1, missing=nan,\n",
+      "             monotone_constraints='()', n_estimators=100, n_jobs=8,\n",
+      "             num_parallel_tree=1, predictor='auto', random_state=0, reg_alpha=0,\n",
+      "             reg_lambda=1, scale_pos_weight=1, subsample=1, tree_method='exact',\n",
+      "             validate_parameters=1, verbosity=None)\n",
+      "0.5590363039637746\n",
+      "y1 results:\n",
+      "ExplainableBoostingRegressor()\n",
+      "0.5199062303999709\n",
+      "RandomForestRegressor()\n",
+      "0.5724909443832146\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sutha\\anaconda3\\lib\\site-packages\\xgboost\\data.py:262: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  elif isinstance(data.columns, (pd.Int64Index, pd.RangeIndex)):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+      "             colsample_bynode=1, colsample_bytree=1, enable_categorical=False,\n",
+      "             gamma=0, gpu_id=-1, importance_type=None,\n",
+      "             interaction_constraints='', learning_rate=0.300000012,\n",
+      "             max_delta_step=0, max_depth=6, min_child_weight=1, missing=nan,\n",
+      "             monotone_constraints='()', n_estimators=100, n_jobs=8,\n",
+      "             num_parallel_tree=1, predictor='auto', random_state=0, reg_alpha=0,\n",
+      "             reg_lambda=1, scale_pos_weight=1, subsample=1, tree_method='exact',\n",
+      "             validate_parameters=1, verbosity=None)\n",
+      "0.5765239806890385\n",
+      "y2 results:\n",
+      "ExplainableBoostingRegressor()\n",
+      "0.4657563630225735\n",
+      "RandomForestRegressor()\n",
+      "0.5912414068632987\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sutha\\anaconda3\\lib\\site-packages\\xgboost\\data.py:262: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  elif isinstance(data.columns, (pd.Int64Index, pd.RangeIndex)):\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "XGBRegressor(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+      "             colsample_bynode=1, colsample_bytree=1, enable_categorical=False,\n",
+      "             gamma=0, gpu_id=-1, importance_type=None,\n",
+      "             interaction_constraints='', learning_rate=0.300000012,\n",
+      "             max_delta_step=0, max_depth=6, min_child_weight=1, missing=nan,\n",
+      "             monotone_constraints='()', n_estimators=100, n_jobs=8,\n",
+      "             num_parallel_tree=1, predictor='auto', random_state=0, reg_alpha=0,\n",
+      "             reg_lambda=1, scale_pos_weight=1, subsample=1, tree_method='exact',\n",
+      "             validate_parameters=1, verbosity=None)\n",
+      "0.5816416886816616\n"
      ]
     }
    ],
@@ -533,14 +620,32 @@
     "X=df2.drop(columns=['label'])\n",
     "X=X.iloc[:,:5]\n",
     "X.drop(columns=['market'],inplace=True)\n",
-    "print(X)\n",
-    "y1=df2.min_price\n",
-    "y2=df2.max_price\n",
-    "y3=df2.modal_price\n",
+    "y=[df2.min_price,df2.max_price,df2.modal_price]\n",
+    "\n",
     "le_df2=LabelEncoder()\n",
     "X['state']=le_df2.fit_transform(X['state'])\n",
     "X['district']=le_df2.fit_transform(X['district'])\n",
-    "X['commodity']=le_df2.fit_transform(X['commodity'])\n"
+    "X['commodity']=le_df2.fit_transform(X['commodity'])\n",
+    "X['Year'] = X['arrival_date'].apply(lambda time: time.year)\n",
+    "X['Month'] = X['arrival_date'].apply(lambda time: time.month)\n",
+    "X['Day'] = X['arrival_date'].apply(lambda time: time.day)\n",
+    "X.drop([\"arrival_date\"],axis=1,inplace=True)\n",
+    "print(X)\n",
+    "\n",
+    "best_models=[]\n",
+    "for i in range(len(y)):\n",
+    "    models=[ExplainableBoostingRegressor(),RandomForestRegressor(),XGBRegressor()]\n",
+    "    X_train,X_test,y_train,y_test=train_test_split(X,y[i],test_size=0.2,random_state=42)\n",
+    "    print(f'y{i} results:')\n",
+    "    for j in range(len(models)):\n",
+    "        models[j].fit(X_train,y_train)\n",
+    "        print(models[j])\n",
+    "        score=r2_score(y_test,models[j].predict(X_test))\n",
+    "        print(score)\n",
+    "        if j==0 or score>max_acc:\n",
+    "            best=models[j]\n",
+    "            max_acc=score \n",
+    "            "
    ]
   },
   {
@@ -1103,7 +1208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "9f1aa203",
    "metadata": {},
    "outputs": [
@@ -1128,99 +1233,205 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>state</th>\n",
-       "      <th>district</th>\n",
-       "      <th>market</th>\n",
-       "      <th>commodity</th>\n",
-       "      <th>label</th>\n",
-       "      <th>arrival_date</th>\n",
-       "      <th>min_price</th>\n",
-       "      <th>max_price</th>\n",
-       "      <th>modal_price</th>\n",
+       "      <th>SUBDIVISION</th>\n",
+       "      <th>YEAR</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Andaman and Nicobar</td>\n",
-       "      <td>South Andaman</td>\n",
-       "      <td>Port Blair</td>\n",
-       "      <td>Amaranthus</td>\n",
-       "      <td>Amaranthus</td>\n",
-       "      <td>04-03-2019</td>\n",
-       "      <td>6000</td>\n",
-       "      <td>8000</td>\n",
-       "      <td>7000</td>\n",
+       "      <th>1583</th>\n",
+       "      <td>24</td>\n",
+       "      <td>1986</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Andaman and Nicobar</td>\n",
-       "      <td>South Andaman</td>\n",
-       "      <td>Port Blair</td>\n",
-       "      <td>Banana - Green</td>\n",
-       "      <td>Banana - Green</td>\n",
-       "      <td>04-03-2019</td>\n",
-       "      <td>4500</td>\n",
-       "      <td>5500</td>\n",
-       "      <td>5000</td>\n",
+       "      <th>2470</th>\n",
+       "      <td>26</td>\n",
+       "      <td>1937</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Andaman and Nicobar</td>\n",
-       "      <td>South Andaman</td>\n",
-       "      <td>Port Blair</td>\n",
-       "      <td>Bhindi(Ladies Finger)</td>\n",
-       "      <td>Bhindi</td>\n",
-       "      <td>04-03-2019</td>\n",
-       "      <td>6000</td>\n",
-       "      <td>8000</td>\n",
-       "      <td>7000</td>\n",
+       "      <th>1233</th>\n",
+       "      <td>35</td>\n",
+       "      <td>1987</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Andaman and Nicobar</td>\n",
-       "      <td>South Andaman</td>\n",
-       "      <td>Port Blair</td>\n",
-       "      <td>Bitter gourd</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>04-03-2019</td>\n",
-       "      <td>6000</td>\n",
-       "      <td>8000</td>\n",
-       "      <td>7000</td>\n",
+       "      <th>2091</th>\n",
+       "      <td>33</td>\n",
+       "      <td>1909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Andaman and Nicobar</td>\n",
-       "      <td>South Andaman</td>\n",
-       "      <td>Port Blair</td>\n",
-       "      <td>Black pepper</td>\n",
-       "      <td>Other</td>\n",
-       "      <td>04-03-2019</td>\n",
-       "      <td>110000</td>\n",
-       "      <td>130000</td>\n",
-       "      <td>120000</td>\n",
+       "      <th>3573</th>\n",
+       "      <td>29</td>\n",
+       "      <td>1987</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3444</th>\n",
+       "      <td>25</td>\n",
+       "      <td>1975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>466</th>\n",
+       "      <td>28</td>\n",
+       "      <td>1922</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3092</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3772</th>\n",
+       "      <td>22</td>\n",
+       "      <td>1952</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>860</th>\n",
+       "      <td>15</td>\n",
+       "      <td>1965</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>3349 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                 state       district      market              commodity  \\\n",
-       "0  Andaman and Nicobar  South Andaman  Port Blair             Amaranthus   \n",
-       "1  Andaman and Nicobar  South Andaman  Port Blair         Banana - Green   \n",
-       "2  Andaman and Nicobar  South Andaman  Port Blair  Bhindi(Ladies Finger)   \n",
-       "3  Andaman and Nicobar  South Andaman  Port Blair           Bitter gourd   \n",
-       "4  Andaman and Nicobar  South Andaman  Port Blair           Black pepper   \n",
+       "      SUBDIVISION  YEAR\n",
+       "1583           24  1986\n",
+       "2470           26  1937\n",
+       "1233           35  1987\n",
+       "2091           33  1909\n",
+       "3573           29  1987\n",
+       "...           ...   ...\n",
+       "3444           25  1975\n",
+       "466            28  1922\n",
+       "3092            4  1974\n",
+       "3772           22  1952\n",
+       "860            15  1965\n",
        "\n",
-       "            label arrival_date  min_price  max_price  modal_price  \n",
-       "0      Amaranthus   04-03-2019       6000       8000         7000  \n",
-       "1  Banana - Green   04-03-2019       4500       5500         5000  \n",
-       "2          Bhindi   04-03-2019       6000       8000         7000  \n",
-       "3           Other   04-03-2019       6000       8000         7000  \n",
-       "4           Other   04-03-2019     110000     130000       120000  "
+       "[3349 rows x 2 columns]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "f865768b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SUBDIVISION</th>\n",
+       "      <th>YEAR</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1029</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2017</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4065</th>\n",
+       "      <td>16</td>\n",
+       "      <td>2011</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>869</th>\n",
+       "      <td>15</td>\n",
+       "      <td>1974</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2002</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>803</th>\n",
+       "      <td>15</td>\n",
+       "      <td>1908</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>332</th>\n",
+       "      <td>21</td>\n",
+       "      <td>1905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4171</th>\n",
+       "      <td>18</td>\n",
+       "      <td>2001</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1187</th>\n",
+       "      <td>35</td>\n",
+       "      <td>1941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1538</th>\n",
+       "      <td>24</td>\n",
+       "      <td>1941</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>857</th>\n",
+       "      <td>15</td>\n",
+       "      <td>1962</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>838 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      SUBDIVISION  YEAR\n",
+       "1029            3  2017\n",
+       "4065           16  2011\n",
+       "869            15  1974\n",
+       "96              0  2002\n",
+       "803            15  1908\n",
+       "...           ...   ...\n",
+       "332            21  1905\n",
+       "4171           18  2001\n",
+       "1187           35  1941\n",
+       "1538           24  1941\n",
+       "857            15  1962\n",
+       "\n",
+       "[838 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1230,7 +1441,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e02905e8",
+   "id": "55d5eda4",
    "metadata": {},
    "outputs": [],
    "source": []
