Trying Weather Dataset API

--- a/Crop Prediction.ipynb
+++ b/Crop Prediction.ipynb
@@ -446,7 +446,7 @@
   {
    "cell_type": "code",
    "execution_count": 105,
-   "id": "6c901a68",
+   "id": "ee1071db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   {
    "cell_type": "code",
    "execution_count": 117,
-   "id": "fe950cf4",
+   "id": "52b912a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,18 +1109,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
-   "id": "a26dc5a4",
+   "execution_count": 129,
+   "id": "8b316f49",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pickle.dump(x, open('annual_rainfall_prediction.pkl', 'wb'))"
+    "pickle.dump(xgbr, open('annual_rainfall_prediction.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9429e340",
+   "metadata": {},
+   "source": [
+    "### API Integration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
+   "id": "07826ae8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests\n",
+    "import datetime as dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 182,
+   "id": "9ce98cb0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BASE_URL='http://api.openweathermap.org/data/2.5/weather?'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 192,
+   "id": "11d55feb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "KEY='66c277899013496cc5fcaf1fa85d5f4f'\n",
+    "city='Port Blair'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 193,
+   "id": "f2c3cd14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response=requests.get(BASE_URL+'appid='+KEY+'&q='+city).json()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 194,
+   "id": "e777b1ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'coord': {'lon': 92.75, 'lat': 11.6667},\n",
+       " 'weather': [{'id': 721,\n",
+       "   'main': 'Haze',\n",
+       "   'description': 'haze',\n",
+       "   'icon': '50d'}],\n",
+       " 'base': 'stations',\n",
+       " 'main': {'temp': 302.17,\n",
+       "  'feels_like': 304.37,\n",
+       "  'temp_min': 302.17,\n",
+       "  'temp_max': 302.17,\n",
+       "  'pressure': 1008,\n",
+       "  'humidity': 61},\n",
+       " 'visibility': 5000,\n",
+       " 'wind': {'speed': 5.14, 'deg': 30},\n",
+       " 'clouds': {'all': 37},\n",
+       " 'dt': 1676112302,\n",
+       " 'sys': {'type': 1,\n",
+       "  'id': 9215,\n",
+       "  'country': 'IN',\n",
+       "  'sunrise': 1676074308,\n",
+       "  'sunset': 1676116489},\n",
+       " 'timezone': 19800,\n",
+       " 'id': 1259385,\n",
+       " 'name': 'Port Blair',\n",
+       " 'cod': 200}"
+      ]
+     },
+     "execution_count": 194,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "response"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 197,
+   "id": "5f88272a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'apple',\n",
+       " 'banana',\n",
+       " 'blackgram',\n",
+       " 'chickpea',\n",
+       " 'coconut',\n",
+       " 'coffee',\n",
+       " 'cotton',\n",
+       " 'grapes',\n",
+       " 'jute',\n",
+       " 'kidneybeans',\n",
+       " 'lentil',\n",
+       " 'maize',\n",
+       " 'mango',\n",
+       " 'mothbeans',\n",
+       " 'mungbean',\n",
+       " 'muskmelon',\n",
+       " 'orange',\n",
+       " 'papaya',\n",
+       " 'pigeonpeas',\n",
+       " 'pomegranate',\n",
+       " 'rice',\n",
+       " 'watermelon'}"
+      ]
+     },
+     "execution_count": 197,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "set(df1.label)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "228953f0",
+   "id": "2c066017",
    "metadata": {},
    "outputs": [],
    "source": []
