Learned something about MongoDB

--- a/Crop Prediction.ipynb
+++ b/Crop Prediction.ipynb
@@ -1874,25 +1874,238 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "97cbff84",
+   "cell_type": "markdown",
+   "id": "52333535",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Trying integration of python with MongoDB"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b6072773",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pymongo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "135137e3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "client=pymongo.MongoClient('mongodb://127.0.0.1:27017/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b4f90e0b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mydb=client['Users']\n",
+    "info=mydb.usernames\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "188827fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.InsertManyResult at 0x1f43b43f880>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#insertion\n",
+    "info.insert_many([{\"uname\":\"Haresh\",\"password\":\"Dinakar\"},{\"uname\":\"Subash\",\"password\":\"poley\"}])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "9cd6ffd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('63f9aefc764a9b86bfb0b35f'),\n",
+       " 'uname': 'aathanush',\n",
+       " 'password': '12345'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "info.find_one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5516991c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('63f9aefc764a9b86bfb0b35f'), 'uname': 'aathanush', 'password': '12345'}\n",
+      "{'_id': ObjectId('63f9c78efb7b1f7ee74a3afe'), 'uname': 'Haresh', 'password': 'Dinakar'}\n",
+      "{'_id': ObjectId('63f9c78efb7b1f7ee74a3aff'), 'uname': 'Subash', 'password': 'poley'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data in info.find({}):\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "ac9d227b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('63f9c78efb7b1f7ee74a3aff'), 'uname': 'Subash', 'password': 'poley'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#searching document with a particular informtion\n",
+    "for data in info.find({'uname':'Subash'}):\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "00f99f31",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for data in info.find({'uname':'unknown'}):\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "88cab37d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('63f9aefc764a9b86bfb0b35f'), 'uname': 'aathanush', 'password': '12345'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "#analogous to OR selection in SQL(for single feature)\n",
+    "for data in info.find({\"uname\":{\"$in\":['aathanush','Subash']},\"password\":{\"$in\":[\"12345\",\"Dinakar\"]}}):\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "8786181f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('63f9aefc764a9b86bfb0b35f'), 'uname': 'aathanush', 'password': '12345'}\n",
+      "{'_id': ObjectId('63f9c78efb7b1f7ee74a3aff'), 'uname': 'Subash', 'password': 'poley'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data in info.find({'$or':[{'uname':'aathanush'},{'password':'poley'}]}):\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "e84cf860",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<pymongo.results.UpdateResult at 0x1f43a312b80>"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#$set operator for updating\n",
+    "info.update_one({'uname':'Haresh'},{\"$set\":{\"password\":\"D\"},\"$currentDate\":{\"lastmodified\":True}})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "99aaef2d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'_id': ObjectId('63f9aefc764a9b86bfb0b35f'), 'uname': 'aathanush', 'password': '12345'}\n",
+      "{'_id': ObjectId('63f9c78efb7b1f7ee74a3afe'), 'uname': 'Haresh', 'password': 'D', 'lastmodified': datetime.datetime(2023, 2, 25, 9, 47, 30, 849000)}\n",
+      "{'_id': ObjectId('63f9c78efb7b1f7ee74a3aff'), 'uname': 'Subash', 'password': 'poley'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "for data in info.find({}):\n",
+    "    print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "9a2966ac",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#other functions update_many, replace_one, replace_many"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "135137e3",
+   "id": "2e1adc10",
    "metadata": {},
    "outputs": [],
    "source": []
